website/versioned_docs/version-0.0.4/api/core/core.rulenorematch.md
---
id: version-0.0.4-core.rulenorematch
title: ruleNoRematch() function
hide_title: true
original_id: core.rulenorematch
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Core API Overview](overview) &gt; [@adpt/core](./core.md) &gt; [ruleNoRematch](./core.rulenorematch.md)

## ruleNoRematch() function

User API function that can be used in a style rule build function to mark the props of the passed in element such that the rule associated with the info parameter will not match against the specified element.

This works by copying the set of all rules that have already matched successfully against the original element (origElement) specified in the info parameter onto the passed in elem. Returns the passed in elem as a convenience. Does not create a new element.

<b>Signature:</b>

```typescript
export declare function ruleNoRematch(info: StyleBuildInfo, elem: jsx.AdaptElement): jsx.AdaptElement<jsx.AnyProps>;
```

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  info | <code>StyleBuildInfo</code> | The second argument to a rule callback function. This indicates which rule to ignore matches of. |
|  elem | <code>jsx.AdaptElement</code> | The element that should not match the specified rule. |

<b>Returns:</b>

`jsx.AdaptElement<jsx.AnyProps>`
